--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "hls.js": "^1.5.17",
     "mithril": "^2.2.2"
   },
   "devDependencies": {
